// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolManager #initialize gas cost 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 54390,
}
`;

exports[`PoolManager #lock gas overhead of no-op lock 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 59506,
}
`;

exports[`PoolManager #mint gas cost 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 268163,
}
`;

exports[`PoolManager #mint gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 272586,
}
`;

exports[`PoolManager #mint gas cost with native tokens 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 247496,
}
`;

exports[`PoolManager #swap gas cost 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 87236,
}
`;

exports[`PoolManager #swap gas cost for swap against liquidity 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 186760,
}
`;

exports[`PoolManager #swap gas cost for swap with native tokens against liquidity 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 179742,
}
`;

exports[`PoolManager #swap gas cost with hooks 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 87264,
}
`;

exports[`PoolManager #swap gas cost with native tokens 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 87044,
}
`;

exports[`PoolManager bytecode size 1`] = `26118`;
